Update NetworkEndpointFetcher.java
Use var url = URI.create(endpoint.url()).toURL();